[workspace]
members = [
  "packages/liquidity-book",
  "contracts/lb_base_hooks",
  "contracts/lb_factory",
  "contracts/lb_pair",
  "contracts/lb_quoter",
  "contracts/lb_router",
  "contracts/lb_token",
  "script/lb_deployer",
  "script/lb_schema",
  "script/lb_secretcli",
  # TODO: update the tests to reflect recent changes
  "tests",
]
default-members = [
  "contracts/lb_factory",
  "contracts/lb_pair",
  "contracts/lb_quoter",
  "contracts/lb_router",
  "contracts/lb_token",
]
resolver = "2"

[workspace.lints.clippy]
too_many_arguments = "allow"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[patch.crates-io]
secret-sdk-proto = { git = "https://github.com/kent-3/secret-rust", branch = "main" }
secretrs = { git = "https://github.com/kent-3/secret-rust", branch = "main" }

[workspace.dependencies]
liquidity-book = { path = "packages/liquidity-book" }
cosmwasm-schema = { version = "2.2.0" }
schemars = { version = "0.8.21" }
serde = { version = "1.0.217" }
serde_json = { version = "1.0.134" }
serde-json-wasm = { version = "1.0.1" }
base64 = "0.22.1"
ethnum = { version = "1.5.0" }
thiserror = { version = "2.0.9" }
anyhow = "1.0.95"
primitive-types = { version = "0.13.1", default-features = false }
rand = "0.8.5"
snafu = "0.8.5"
hex = "0.4.3"

cc = { version = "=1.1.10" }

[workspace.dependencies.cosmwasm-std]
version = "=1.1.11"
package = "secret-cosmwasm-std"
features = ["random"]
# git = "https://github.com/scrtlabs/cosmwasm"
# tag = "v1.1.11-secret"

[workspace.dependencies.cosmwasm-storage]
version = "=1.1.11"
package = "secret-cosmwasm-storage"
# git = "https://github.com/scrtlabs/cosmwasm"
# tag = "v1.1.11-secret"

[workspace.dependencies.secret-toolkit]
version = "0.10.2"
default-features = false
features = ["snip20", "storage", "viewing-key", "permit"]
# git = "https://github.com/scrtlabs/secret-toolkit"
# tag = "v0.10.0"

# TODO: stop depending on dis
[workspace.dependencies.shade-protocol]
git = "https://github.com/securesecrets/shade"
branch = "orderbook/library"
features = ["admin"]

[workspace.dependencies.shade-multi-test]
git = "https://github.com/securesecrets/shade"
branch = "orderbook/library"
features = ["snip20", "query_auth"]
