[package]
name = "libraries"
version = "0.14.0"
authors = [
  "Kent, Haseeb",
]
edition = "2021"
description = "Helpers for contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret", features = ["stargate"] }
cosmwasm-schema = { version = "1.2" }
serde = { version = "1" }
thiserror = { version = "1" }
ethnum = { version = "1" }
