[package]
name = "lb-pair"
version = "0.1.0"
edition = "2021"
exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
liquidity-book = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cosmwasm-schema = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-json-wasm = { workspace = true }
thiserror = { workspace = true }
secret-toolkit = { workspace = true }
ethnum = { workspace = true }
hex = { workspace = true }
# the only thing we're using here is the snip20 interface...
shade-protocol = { workspace = true }

cc = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
lb-tests = { path = "../tests" }
shade-multi-test = { workspace = true }
