[package]
name = "lb-router"
version = "0.1.0"
authors = ["Tony <plutonyium@gmail.com>"]
edition = "2021"
exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
cosmwasm-std = { workspace = true }
shade-protocol = { workspace = true }
lb-interfaces = { workspace = true }
lb-libraries = { workspace = true }
snafu = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cosmwasm-schema = { workspace = true }

cc = { workspace = true }

[dev-dependencies]
serial_test = "2.0.0"
