[package]
name = "lb-router"
version = "0.1.0"
authors = ["Kent"]
edition = "2021"
exclude = ["contract.wasm", "hash.txt"]

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
liquidity-book = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cosmwasm-schema = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde-json-wasm = { workspace = true }
thiserror = { workspace = true }
ethnum = { workspace = true }
secret-toolkit = { workspace = true }
shade-protocol = { workspace = true }

cc = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
