[package]
name = "lb-staking"
version = "0.1.0"
authors = ["Haseeb Saeed <me@itsHaseebSaeed.com>"]
edition = "2021"
exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"

[features]
default = []

[dependencies]
shade-protocol = { workspace = true }
lb-interfaces = { workspace = true }
lb-libraries = { workspace = true }
snafu = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
serde_json = { workspace = true }
