[package]
name = "lb-token"
version = "0.1.0"
authors = ["DDT5", "itsHaseebSaeed"]
edition = "2021"
exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
liquidity-book = { workspace = true }
snip1155 = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cosmwasm-schema = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
secret-toolkit = { workspace = true }
ethnum = { workspace = true }

cc = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
