[package]
name = "lb-token2"
version = "0.1.0"
authors = ["Kent"]
edition = "2021"
exclude = ["contract.wasm", "hash.txt"]

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
liquidity-book = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cosmwasm-schema = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
secret-toolkit = { workspace = true }
ethnum = { workspace = true }

cc = { workspace = true }
