[package]
name = "lb-tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
lb-interfaces = { workspace = true }
lb-libraries = { workspace = true }
lb-factory = { path = "../lb_factory" }
lb-pair = { path = "../lb_pair" }
lb-token = { path = "../lb_token" }
shade-protocol = { workspace = true, features = ["query_auth_impl"] }
rand = "0.8"

[dev-dependencies]
anyhow = "1"

[dev-dependencies.shade-multi-test]
git = "https://github.com/securesecrets/shade"
branch = "kent-3/patch1"
default_features = false
features = ["snip20", "query_auth"]

[dev-dependencies.shadeswap-shared]
git = "https://github.com/securesecrets/shade"
branch = "itsHaseebSaeed-LiquidityBook"
features = []

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
shade-protocol = { workspace = true, features = ["multi-test"] }
multi-derive = { git = "https://github.com/securesecrets/shade" }
