[package]
name = "lb-tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
shade-protocol = { workspace = true }
lb-libraries = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde-json-wasm = { workspace = true }
ethnum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
cosmwasm-std = { workspace = true }
rand = { workspace = true }
shade-multi-test = { workspace = true, features = [
  "admin",
  "lb-factory",
  "lb-pair",
  "lb-router",
  "lb-staking",
  "lb-token",
  "query_auth",
  "snip20",
] }
serial_test = "2.0.0"
