[package]
name = "lb-deployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41", features = ["rt", "macros", "sync", "time"] }
tonic = { version = "0.12" }
prost = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
color-eyre = { version = "0.6" }
serde = "1.0"
serde_json = "1.0"
base64 = "0.22"
hex = "0.4"
hex-literal = "0.4"
regex = "1.10"
bip32 = "0.5"
bip39 = "2.0"
nanorand = { version = "0.7", features = ["getrandom", "zeroize"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
sha2 = "0.10"
secretrs = { version = "0.1.3", features = ["grpc"] }
cosmwasm-std = { workspace = true }
liquidity-book = { workspace = true }
secret-toolkit-snip20 = "0.10.2"
ethnum = { workspace = true }

shade-protocol = { workspace = true, features = ["query_auth"] }
